--- a/search.html
+++ b/search.html
@@ -12,7 +12,7 @@
 <body>
   <div id="wrap">
     <!--페이지 시작-->
-    <header class="hWrap on">
+    <header class="hWrap one">
       <!--상단헤더 시작-->
       <div id="layer" class="menu_toggle hide">
         <div class="toggle_container">
