공통 모듈 분리

--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>네오룩</title>
+
   <!-- Swiper JS -->
   <link rel="stylesheet" href="./css/swiper.css">
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/style.css">
 
   <script type="text/javascript" src="./js/matchMedia.js"></script>
   <script type="text/javascript" src="./js/matchMedia.addListener.js"></script>
   <script src="./js/jquery-3.6.1.min.js"></script>
+  <script defer src="./js/common.js"></script>
   <script defer src="./js/index.js"></script>
-  <link rel="stylesheet" href="./css/style.css">
 
 
-  <title>네오룩</title>
 </head>
 
 <body>
